--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: prepare
       run: |
-        make prepare
+        make clean
     - name: configure
       run: |
         cmake -H"." -Bbuild -T host=x86 -A x64 -DCMAKE_BUILD_TYPE="Debug"
