--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 
 project(
-    "CppTemplate"
+    "CppProjectTemplate"
     VERSION 1.0.0
     LANGUAGES C CXX)
 
